--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>tmnsur</title>
   </head>
   <body>
-    <p>tetris.js</p><a href="/tetris.js/">link</p>
+    <a href="/tetris.js/">tetris.js</a>
   </body>
 </html>
