--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>tmnsur</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>tetris.js</title>
+    <link href="/tetris.js/assets/css/style.css?v=93b0db6acbe65cc7c1ce792c6476e66e24dbdb07" rel="stylesheet">
   </head>
   <body>
-    <a href="/tetris.js/">tetris.js</a>
+    <div class="container">
+      <h1 id="tetrisjs">tetris.js</h1>
+<p>browser (chrome) based tetris game</p>
+
+<p>Live at <a href="https://tmnsur.github.io/tetris.js/tetris.html">https://tmnsur.github.io/tetris.js/tetris.html</a></p>
+
+    </div>
   </body>
 </html>
