--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
 <p>Live at <a href="https://tmnsur.github.io/tetris.js/tetris.html">https://tmnsur.github.io/tetris.js/tetris.html</a></p>
 
     </div>
+    <div class="container">
+      <h1 id="bptreejs">bptree.js</h1>
+      <p>B+ tree implementation in js</p>
+      <p>Live at <a href="https://tmnsur.github.io/b-plus-tree.js/bptree.html">https://tmnsur.github.io/b-plus-tree.js/bptree.html</a></p>
+    </div>
   </body>
 </html>
