--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
 <p>Live at <a href="https://tmnsur.github.io/tetris.js/tetris.html">https://tmnsur.github.io/tetris.js/tetris.html</a></p>
 
     </div>
+
     <div class="container">
       <h1 id="bptreejs">bptree.js</h1>
       <p>B+ tree implementation in js</p>
       <p>Live at <a href="https://tmnsur.github.io/b-plus-tree.js/bptree.html">https://tmnsur.github.io/b-plus-tree.js/bptree.html</a></p>
+    </div>
+
+    <div class="container">
+      <h1 id="ibmpcjs">bptree.js</h1>
+      <p>IBM PC Emulator (incomplete) implementation in js</p>
+      <p>Live at <a href="https://tmnsur.github.io/ibm-pc-emulator.js/emulator.html">https://tmnsur.github.io/ibm-pc-emulator.js/emulator.html</a></p>
     </div>
   </body>
 </html>
