--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>tetris.js</title>
+    <title>Showcase</title>
     <link href="/tetris.js/assets/css/style.css?v=93b0db6acbe65cc7c1ce792c6476e66e24dbdb07" rel="stylesheet">
   </head>
   <body>
