--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="container">
-      <h1 id="ibmpcjs">bptree.js</h1>
+      <h1 id="ibmpcjs">ibm-pc.js</h1>
       <p>IBM PC Emulator (incomplete) implementation in js</p>
       <p>Live at <a href="https://tmnsur.github.io/ibm-pc-emulator.js/emulator.html">https://tmnsur.github.io/ibm-pc-emulator.js/emulator.html</a></p>
     </div>
